--- a/Sunshine/app/src/main/res/layout/list_item_forecast_today.xml
+++ b/Sunshine/app/src/main/res/layout/list_item_forecast_today.xml
@@ -7,7 +7,8 @@
     android:minHeight="?android:attr/listPreferredItemHeight"
     android:orientation="horizontal"
     android:padding="16dp"
-    android:baselineAligned="false">
+    android:baselineAligned="false"
+    android:background="@drawable/touch_selector">
     <LinearLayout
         android:layout_height="wrap_content"
         android:layout_width="0dp"
