--- a/Sunshine/app/src/main/res/menu/forecastfragment.xml
+++ b/Sunshine/app/src/main/res/menu/forecastfragment.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item android:id="@+id/action_refresh" android:title="@string/action_refresh"
-     app:showAsAction="ifRoom|withText" />
+    <item
+        android:id="@+id/action_refresh"
+        android:title="@string/action_refresh"
+        app:showAsAction="ifRoom|withText" />
+    <item
+        android:id="@+id/action_preferedlocation"
+        android:icon="@android:drawable/ic_dialog_map"
+        android:title="@string/menu_location"
+        app:showAsAction="ifRoom|withText" />
 </menu>
